--- a/app/src/main/res/layout/activity_home__page.xml
+++ b/app/src/main/res/layout/activity_home__page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/start_page_bg"
     tools:context=".Home_Page">
 
     <HorizontalScrollView
@@ -674,14 +675,11 @@
 
     <ImageView
         android:id="@+id/ivFilter_men"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_filters"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="@dimen/dp_50"
+        android:src="@drawable/icon_filter"
         android:layout_marginLeft="@dimen/dp_10"
-        android:background="@drawable/filter_bg"/>
-
-
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="@dimen/dp_50"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
