--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -9,14 +9,13 @@
     tools:context=".Support">
 
     <TextView
+        android:id="@+id/tvBack"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@color/orange_startup"
         android:backgroundTint="@color/orange_startup"
         android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
-        android:drawableRight="@drawable/ic_baseline_format_list_bulleted_24"
         android:drawablePadding="@dimen/dp_15"
         android:paddingTop="@dimen/dp_30"
         android:paddingBottom="@dimen/dp_15"
@@ -37,7 +36,6 @@
         android:textSize="@dimen/sp_22"
         android:paddingTop="@dimen/dp_20"
         android:paddingStart="@dimen/dp_15"
-        android:drawableEnd="@drawable/ic_loupe"
         android:layout_marginEnd="@dimen/dp_10"/>
 
     <TextView
@@ -127,21 +125,6 @@
         android:textColor="@color/black"
         android:textSize="@dimen/sp_18" />
 
-    <TextView
-        android:id="@+id/tVseeAll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="195dp"
-        android:paddingStart="@dimen/dp_20"
-        android:text="See all 9 articles"
-        android:textAllCaps="true"
-        android:textColor="@color/orange_startup"
-        android:textSize="@dimen/sp_18" />
-
     <ImageButton
         android:layout_width="@dimen/dp_70"
         android:layout_height="@dimen/dp_70"
@@ -160,6 +143,5 @@
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="60dp"
         android:background="@drawable/ic_baseline_create_24" />
-
 
 </RelativeLayout>
