working on scroll and age validation

--- a/app/src/main/res/layout/activity_age_.xml
+++ b/app/src/main/res/layout/activity_age_.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_30"
         android:background="@color/light_gray"
-        android:drawableStart="@drawable/scroll_bar"
+        android:drawableStart="@drawable/age_scroll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,22 +43,6 @@
         app:layout_constraintStart_toStartOf="@+id/tvAge_main"
         app:layout_constraintTop_toBottomOf="@+id/tvAge_main" />
 
-
-    <EditText
-        android:id="@+id/etDate_month"
-        android:layout_width="@dimen/dp_80"
-        android:layout_height="@dimen/dp_60"
-        android:layout_marginTop="@dimen/dp_40"
-        android:inputType="date"
-        android:hint="@string/hint_month"
-        android:textColorHint="@color/black"
-        android:textSize="@dimen/sp_28"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.087"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvAge_body" />
-
     <EditText
         android:id="@+id/etDate_day"
         android:layout_width="@dimen/dp_80"
@@ -72,8 +56,24 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
-        app:layout_constraintStart_toEndOf="@+id/etDate_month"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvAge_body" />
+
+    <EditText
+        android:id="@+id/etDate_month"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_60"
+        android:layout_marginTop="@dimen/dp_40"
+        android:inputType="date"
+        android:hint="@string/hint_month"
+        android:textColorHint="@color/black"
+        android:textSize="@dimen/sp_28"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.087"
+        app:layout_constraintStart_toEndOf="@+id/etDate_day"
+        app:layout_constraintTop_toBottomOf="@+id/tvAge_body" />
+
 
     <EditText
         android:id="@+id/etDate_year"
@@ -89,7 +89,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.211"
-        app:layout_constraintStart_toEndOf="@+id/etDate_day"
+        app:layout_constraintStart_toEndOf="@+id/etDate_month"
         app:layout_constraintTop_toBottomOf="@+id/tvAge_body" />
 
     <Button
