--- a/app/src/main/res/layout/activity_select_distance.xml
+++ b/app/src/main/res/layout/activity_select_distance.xml
@@ -57,7 +57,8 @@
 
                 <RadioButton
                     android:id="@+id/rb_10"
-                    style="@style/RadioButton" />
+                    style="@style/RadioButton"
+                    android:checked="false"/>
             </LinearLayout>
 
             <View style="@style/Filter_lineview"></View>
