--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_10"
         android:layout_margin="@dimen/dp_25"
-        android:drawableStart="@drawable/scroll_bar"
+        android:drawableStart="@drawable/completeprofile_scroll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btn_cross" />
