--- a/app/src/main/res/layout/activity_interest.xml
+++ b/app/src/main/res/layout/activity_interest.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_30"
         android:layout_marginTop="@dimen/dp_30"
-        android:drawableStart="@drawable/scroll_bar"
+        android:drawableStart="@drawable/interest_scroll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
