--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -49,6 +49,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <LinearLayout
+            android:id="@+id/btn_ll_completeprofile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
         <RelativeLayout
             android:id="@+id/rl_img"
             android:layout_width="wrap_content"
@@ -85,7 +91,7 @@
             android:layout_marginTop="@dimen/dp_20"
             android:layout_marginRight="@dimen/dp_30"
             android:background="@color/light_gray"
-            android:drawableStart="@drawable/scroll_bar" />
+            android:drawableStart="@drawable/completeprofile_scroll" />
 
         <TextView
             android:id="@+id/tv_complete_profile"
@@ -99,7 +105,7 @@
         <View
             android:id="@+id/settings_l1"
             style="@style/Filter_Fulllineview"></View>
-
+        </LinearLayout>
         <LinearLayout
             android:id="@+id/ll_settings"
             style="@style/Filter_LinearLayout">
