--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -65,6 +65,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">@dimen/dp_20</item>
+        <item name="android:checked">false</item>
 
     </style>
     <style name="Buttons">
