--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,5 +50,11 @@
     <dimen name="dp_88">88dp</dimen>
     <dimen name="dp_220">220dp</dimen>
     <dimen name="sp_25">25sp</dimen>
+    <dimen name="dp_390">390dp</dimen>
+    <dimen name="dp_85">85dp</dimen>
+    <dimen name="dp_130">130dp</dimen>
+    <dimen name="dp_340">340dp</dimen>
+    <dimen name="dp_320">320dp</dimen>
+    <dimen name="dp_29">29dp</dimen>
 
 </resources>
