--- a/app/src/main/res/layout/activity_home__page__women.xml
+++ b/app/src/main/res/layout/activity_home__page__women.xml
@@ -30,6 +30,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -58,6 +59,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -85,6 +87,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -113,6 +116,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -141,6 +145,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -170,6 +175,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -198,6 +204,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -226,6 +233,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -254,6 +262,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -283,6 +292,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -311,6 +321,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName11"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -339,6 +350,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -367,6 +379,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName13"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -394,6 +407,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -422,6 +436,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -450,6 +465,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -478,6 +494,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName17"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -505,6 +522,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName18"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -533,6 +551,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName19"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -560,6 +579,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tvWName20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
