--- a/app/src/main/res/layout/activity_premium_page.xml
+++ b/app/src/main/res/layout/activity_premium_page.xml
@@ -53,7 +53,7 @@
   <Button
       android:id="@+id/button_premiere"
       android:layout_width="match_parent"
-      android:layout_height="@dimen/dp_40"
+      android:layout_height="37dp"
       android:layout_marginStart="@dimen/dp_20"
       android:layout_marginTop="@dimen/dp_340"
       android:layout_marginEnd="@dimen/dp_20"
@@ -97,7 +97,7 @@
   <ImageView
       android:id="@+id/imageViewPremiumClose"
       android:layout_width="@dimen/dp_29"
-      android:layout_height="@dimen/dp_25"
+      android:layout_height="18dp"
       android:layout_marginLeft="@dimen/dp_320"
       android:layout_marginRight="@dimen/dp_10"
       app:srcCompat="@drawable/cross_icon" />
