--- a/app/src/main/res/drawable/ic_profile_pic.xml
+++ b/app/src/main/res/drawable/ic_profile_pic.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="30dp"
-    android:height="@dimen/dp_30"
+    android:width="@dimen/dp_300"
+    android:height="@dimen/dp_300"
     android:viewportWidth="456.368"
     android:viewportHeight="456.368">
   <path
