--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -78,6 +78,15 @@
         <item name="android:background">@drawable/rounded_rec_orange</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="ButtonsWithOutMargin">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/sp_20</item>
+        <item name="android:background">@drawable/rounded_rec_orange</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
     <style name="BlueButtons">
         <item name="android:layout_width">match_parent</item>
