--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="white_startup">#ffffff</color>
     <color name="raspberry">#d21f3c</color>
     <color name="google_bg">#ededed</color>
+    <color name="golden_yellow">#ffd700</color>
 
 
 </resources>
